--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node specRunner.js",
     "start": "node server.js"
   },
   "author": "",
@@ -16,6 +16,8 @@
     "mongoose": "^4.8.5"
   },
   "devDependencies": {
+    "jasmine": "^2.5.3",
+    "jasmine-console-reporter": "^1.2.7",
     "request": "^2.80.0"
   }
 }
