--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.8.5"
   },
   "devDependencies": {
+    "eslint": "^3.17.1",
     "jasmine": "^2.5.3",
     "jasmine-console-reporter": "^1.2.7",
     "request": "^2.80.0"
